pipeline is been created

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 pandas
 numpy
 scikit-learn
-
+ipykernel
+seaborn
+Flask
+#this is more stable version
+mlflow==2.2.2
+dvc
 # e. to install local package
